# imdb-scrapper

./: .gitignore  .travis.yml  Cargo.toml  EXAMPLE.md  README.md  Readme  Readme.md  _index.js  generateReadMe.js  index.js  jobs.js  outputGenerator.js  package-lock.json  package.json  readme  test.js
.github/workflows/: release.yml  rust.yml
lib/: actor.js  awards.js  cache.js  data.js  episode.js  error.js  index.js  native.js  photo.js  promisify.js  request.js  search.js  shedule.js  trending.js  upcoming.js  worker.js
native/: Cargo.toml
native/src/: episode.rs  lib.rs  request.rs  scrap.rs
output/: awardsPage-tt5580390.json  episodesPage-tt3107288-2.json  getActor-nm2652716.json  getCast-tt1825683.json  getFull-tt2395427.json  getStarsByBornDay-Sat Nov 17 2018 21:48:56 GMT+0530 (India Standard Time).json  getStarsByBornDay-Sun Nov 18 2018 13:59:24 GMT+0530 (India Standard Time).json  getTrending-7.json  getTrending-comedy-7.json  getUpcoming-20.json  scrapper-tt1825683.json  searchActor-govinda.json  simpleSearch-flash.json
src/: episode.rs  lib.rs  request.rs  scrap.rs  scrapper.rs  types.rs
test/: result.md  test-new.js  test.js
