[package]
name = "imdb-scrapper"
version = "3.0.0"
authors = ["Anshul Goyal <anshulgoel151999@gmail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "imdb_scrapper"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
select = "0.4.3"
curl = "0.4.28"